--- a/fqmsfmodule/build.gradle
+++ b/fqmsfmodule/build.gradle
@@ -3,7 +3,7 @@ plugins {
     id 'maven-publish'
 }
 group = "com.github.Hutu-start"
-version = "1.0.0"
+version = "1.0.1"
 android {
     compileSdkVersion 33
     buildToolsVersion "30.0.3"
@@ -33,9 +33,9 @@ android {
 
 dependencies {
     compileOnly fileTree(dir: './libs', include: ['MsfPerformanceSdk_V*.aar'])
-    implementation('com.alibaba:fastjson:1.2.83')
-    api "com.mpaas.android:face-verify:3.5.4"
-    implementation('com.amap.api:location:6.4.2')
+    api 'com.alibaba:fastjson:1.2.83'
+//    api "com.mpaas.android:face-verify:3.5.4"
+    api 'com.amap.api:location:6.4.2'
 }
 
 afterEvaluate {
