--- a/fqmsfmodule/build.gradle
+++ b/fqmsfmodule/build.gradle
@@ -3,7 +3,7 @@ plugins {
     id 'maven-publish'
 }
 group = "com.github.Hutu-start"
-version = "1.0.1"
+version = "1.0.2"
 android {
     compileSdkVersion 33
     buildToolsVersion "30.0.3"
@@ -30,12 +30,23 @@ android {
     }
 
 }
-
+//repositories {
+//    flatDir {
+//        dirs 'libs'
+//    }
+//}
 dependencies {
+//    implementation 'androidx.appcompat:appcompat:1.0.0'
+//    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
+
+//    api(name: 'MsfPerformanceSdk_V1.0.2', ext: 'aar')
+//    api(name: 'face-verify-sdk-3.5.0.230823195944', ext: 'aar')
     compileOnly fileTree(dir: './libs', include: ['MsfPerformanceSdk_V*.aar'])
-    api 'com.alibaba:fastjson:1.2.83'
+//    implementation 'com.alibaba:fastjson:1.2.83'
 //    api "com.mpaas.android:face-verify:3.5.4"
-    api 'com.amap.api:location:6.4.2'
+//    implementation 'com.amap.api:location:6.4.2'
+    api 'com.mpaas.android:face-verify:3.5.4'
+//    implementation 'com.github.Hutu-start:msf2:1.0.1'
 }
 
 afterEvaluate {
