--- a/fqmsfmodule/build.gradle
+++ b/fqmsfmodule/build.gradle
@@ -3,7 +3,7 @@ plugins {
     id 'maven-publish'
 }
 group = "com.github.Hutu-start"
-version = "1.0.3"
+version = "1.0.5"
 android {
     compileSdkVersion 33
     buildToolsVersion "30.0.3"
@@ -45,7 +45,7 @@ dependencies {
 //    implementation 'com.alibaba:fastjson:1.2.83'
 //    implementation 'com.amap.api:location:6.4.2'
     api 'com.mpaas.android:face-verify:3.5.4'
-//    implementation 'com.github.Hutu-start:msf2:1.0.2'
+//    api 'com.github.Hutu-start:msf2:1.0.3'
 }
 
 afterEvaluate {
