--- a/fqmsfmodule/build.gradle
+++ b/fqmsfmodule/build.gradle
@@ -6,7 +6,7 @@ plugins {
 //apply plugin: 'com.android.library'
 //apply plugin: 'com.kezong.fat-aar'
 group = "com.github.Hutu-start"
-version = "1.1.0"
+version = "1.1.1"
 android {
     compileSdkVersion 33
     buildToolsVersion "30.0.3"
@@ -45,9 +45,9 @@ repositories {
         dirs 'libs'
     }
 }
-fataar {
-    transitive = true
-}
+//fataar {
+//    transitive = true
+//}
 dependencies {
 //    implementation 'androidx.appcompat:appcompat:1.0.0'
 //    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
