--- a/fqmsfmodule/build.gradle
+++ b/fqmsfmodule/build.gradle
@@ -6,7 +6,7 @@ plugins {
 //apply plugin: 'com.android.library'
 //apply plugin: 'com.kezong.fat-aar'
 group = "com.github.Hutu-start"
-version = "1.1.2"
+version = "1.1.3"
 android {
     compileSdkVersion 33
     buildToolsVersion "30.0.3"
@@ -66,7 +66,7 @@ dependencies {
     embed 'com.alipay.android.phone.mobilecommon:xnn-build:10.1.60a.2502'
     embed 'com.alipay.android.phone.mobilesdk:common-build:10.1.60a.1699'
     embed 'com.alipay.android.phone.mobilesdk:logging-build:10.2.3.122.25-saas'
-    embed 'com.alipay.android.phone.mobilesdk:monitor-build:10.1.60a.00002633'
+    embed 'com.alipay.android.phone.mobilesdk:monitor-build:10.2.3.584'
     embed 'com.alipay.android.phone.mobilesdk:netsdkextdependapi-build:10.1.60a.00002657'
     embed 'com.alipay.android.phone.mobilesdk:rpc-build:10.1.60a.00003134'
     embed 'com.alipay.android.phone.mobilesdk:transport-build:10.2.3.226'
@@ -75,11 +75,11 @@ dependencies {
     embed 'com.alipay.multimedia.base:basic-build:10.1.60a.1821'
     embed 'com.alipay.multimedia:xmedia-build:10.1.60a.2024'
     embed 'com.mpaas.android.adapter:utdid-adapter:10.1.60a.00002714'
-    embed 'com.mpaas.android.verify:deepsec:1.0.0'
-    embed 'com.mpaas.android.verify:face-verify-sdk:3.5.0.230823195944'
+    embed 'com.mpaas.android.verify:deepsec:7.0.1.20241118'
+    embed 'com.mpaas.android.verify:face-verify-sdk:3.6.0.240618163529'
     embed 'com.mpaas.android.verify:ocr-sdk:3.5.0.230823195944'
-    embed 'com.mpaas.android.verify:openplatform-sdk:3.5.0.230824152352'
-    embed 'com.mpaas.android:face-verify:3.5.4'
+    embed 'com.mpaas.android.verify:openplatform-sdk:3.6.0.240617183318'
+    embed 'com.mpaas.android:face-verify:3.6.1'
     embed 'com.mpaas.commonlib:libcshared-build:10.1.60a.00002915'
     embed 'com.mpaas.ocr.model:bankcard-build:10.1.60a.1699'
     embed 'com.mpaas.ocr.model:bankframe-build:10.1.60a.1699'
