--- a/fqmsfmodule/build.gradle
+++ b/fqmsfmodule/build.gradle
@@ -6,7 +6,7 @@ plugins {
 //apply plugin: 'com.android.library'
 //apply plugin: 'com.kezong.fat-aar'
 group = "com.github.Hutu-start"
-version = "1.1.3"
+version = "1.1.4"
 android {
     compileSdkVersion 33
     buildToolsVersion "30.0.3"
@@ -49,7 +49,7 @@ repositories {
 //    transitive = true
 //}
 dependencies {
-//    implementation 'androidx.appcompat:appcompat:1.0.0'
+    implementation 'androidx.appcompat:appcompat:1.6.1'
 //    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
 
 //    api(name: 'MsfPerformanceSdk_V1.0.2', ext: 'aar')
